JDK9 warning and optimization fixes