@@ -70,8 +70,9 @@ public class ClassLoaderHandlerRegistry {
             try {
                 // Instantiate each ClassLoaderHandler in order to call the handledClassLoaders() method (this is
                 // needed because Java doesn't support inherited static interface methods)
-                this.handledClassLoaderNames = classLoaderHandlerClass.newInstance().handledClassLoaders();
-            } catch (InstantiationException | IllegalAccessException e) {
+                this.handledClassLoaderNames = classLoaderHandlerClass.getDeclaredConstructor().newInstance()
+                		.handledClassLoaders();
+            } catch (Exception e) {
                 throw new RuntimeException("Could not instantiate " + classLoaderHandlerClass.getName(), e);
             }
         }
